style: Fixing some other contrast issues

--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -98,29 +98,30 @@
 
     &:active,
     &.rbc-active {
-      background-color: var(--color-border-accent);
+      background-color: transparent;
       background-image: none;
       border-color: var(--color-border-accent);
       box-shadow: inset 0 var(--space-02) var(--space-04) rgba(0, 0, 0, 0.125);
+      color: var(--color-border-accent);
 
       &:hover,
       &:focus {
-        background-color: var(--color-border-accent);
+        background-color: transparent;
         border-color: var(--color-border-accent);
-        color: var(--color-text-primary);
+        color: var(--color-border-accent);
       }
     }
 
     &:focus {
-      background-color: var(--color-border-accent);
+      background-color: transparent;
       border-color: var(--color-border-accent);
-      color: var(--color-text-primary);
+      color: var(--color-border-accent);
     }
 
     &:hover {
-      background-color: var(--color-border-accent);
+      background-color: transparent;
       border-color: var(--color-border-accent);
-      color: var(--color-text-primary);
+      color: var(--color-border-accent);
     }
   }
 }
@@ -180,9 +181,61 @@
 }
 
 .rbc-off-range-bg {
-  background: var(--color-border-accent);
+  background: var(--color-bg-accent);
 }
 
 .rbc-off-range {
   color: var(--color-text-primary);
+}
+
+.rbc-date-cell {
+  flex: 1 1 0;
+  min-width: 0;
+  padding-right: var(--space-06);
+  text-align: right;
+
+  &.rbc-now {
+    color: var(--color-border-accent);
+    font-weight: bold;
+  }
+
+  > a {
+    &,
+    &:active,
+    &:visited {
+      color: inherit;
+      text-decoration: none;
+    }
+  }
+}
+
+.rbc-time-slot {
+  flex: 1 0 0;
+  text-align: right;
+
+  &.rbc-now {
+    font-weight: bold;
+  }
+}
+
+.rbc-current-time-indicator {
+  background-color: transparent;
+  height: 1px;
+  left: 0;
+  pointer-events: none;
+  position: absolute;
+  right: 0;
+  z-index: 3;
+}
+
+.rbc-agenda-time-cell {
+  text-align: right;
+  text-transform: lowercase;
+
+  .rbc-continues-after:after {
+    content: ' »';
+  }
+  .rbc-continues-prior:before {
+    content: '« ';
+  }
 }
