--- a/src/styles/tokens.scss
+++ b/src/styles/tokens.scss
@@ -87,6 +87,7 @@ body {
   --color-border-primary: var(--black4);
   --color-border-secondary: var(--black3);
   --color-border-accent: var(--color-brand-primary);
+  --color-bg-accent: var(--black4);
   --color-fill-app: var(--black0);
   --color-fill-body: var(--body0);
   --color-fill-card: var(--black1);
@@ -161,6 +162,7 @@ body {
   --color-border-primary: var(--black4);
   --color-border-secondary: var(--black3);
   --color-border-accent: var(--brand4);
+  --color-bg-accent: var(--black7);
   --color-fill-app: #090c15;
   --color-fill-body: #090c15;
   --color-fill-card: var(--black9);
